<resources>
    <string name="app_name">SiVi</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">252993385233789</string>
    <string name="fb_login_protocol_scheme">fb252993385233789</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_upload_location">Đăng ký phòng trọ</string>
    <string name="nav_item_login">Đăng nhập</string>
    <string name="nav_item_find_location">Phòng trọ</string>
    <string name="nav_item_find_job">Việc làm</string>
    <string name="nav_item_about">Thông tin Sivi</string>
    <string name="nav_item_user_info">Thông tin cá nhân</string>
    <string name="nav_item_logout">Đăng xuất</string>
    <string-array name="nav_drawer_labels">
        
        <item>@string/nav_item_find_location</item>
        <item>@string/nav_item_find_job</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string-array name="nav_drawer_labels_2">
        <item>@string/nav_item_upload_location</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string name="title_upload_location">Đăng ký phòng trọ</string>
    <string name="title_signin">Đăng nhập</string>
    <string name="title_signup">Đăng ký</string>
    <string name="title_forget_password">Lấy lại mật khẩu</string>
    <string name="title_find_location">Tìm phòng trọ</string>
    <string name="title_find_job">Tìm việc làm</string>
    <string name="title_about_sivi">Thông tin Sivi</string>
    <string name="title_detail_job">Thông tin chi tiết</string>
    <string name="title_user_info">Thông tin cá nhân</string>
    <string name="title_detail_location">Thông tin phòng trọ</string>
    <string name="text_radio_user">Người dùng</string>
    <string name="text_radio_master">Chủ nhà trọ</string>
    <string name="text_email">Email đăng nhập</string>
    <string name="text_user_password">Mật khẩu</string>
    <string name="text_save_info">Lưu lại thông tin đăng nhập lần sau</string>
    <string name="text_save_info_fb">Xác nhận tài khoản bằng Facebook</string>
    <string name="text_signin">Đăng nhập</string>
    <string name="text_signup">Đăng ký</string>
    <string name="text_forgot_password">Quên mật khẩu</string>
    <string name="text_signup_family_name">Họ Tên</string>
    <string name="text_signup_middle_name">Tên đệm</string>
    <string name="text_signup_first_name">Tên</string>
    <string name="text_signup_dob">Ngày sinh</string>
    <string name="text_signup_sex">Giới tính</string>
    <string name="text_signup_school">Trường</string>
    <string name="text_signup_class">Chuyên ngành</string>
    <string name="text_signup_grade">Khoá</string>
    <string name="text_signup_address">Số nhà</string>
    <string name="text_signup_address_town">Phường/Xã</string>
    <string name="text_signup_address_district">Quận/Huyện</string>
    <string name="text_signup_address_city">Thành phố/Tỉnh</string>
    <string name="text_signup_address_country">Quốc tịch</string>
    <string name="text_signup_email">Email</string>
    <string name="text_signup_telephone">Số điện thoại di động</string>
    <string name="text_signup_password">Mật khẩu (gồm 8 ký tự chữ và số)</string>
    <string name="text_signup_re_password">Xác nhận mật khẩu</string>
    <string name="text_signup_code">Nhập mã code</string>
    <string name="text_forget_password_email">Nhập email</string>
    <string name="text_signup_notify">Bạn cần chụp ảnh thẻ sinh viên</string>
    <string name="text_signup_info_notify">Bạn cần điền thông tin vào mẫu sau:</string>
    <string name="text_signup_selfie_notify">Bạn cần chụp ảnh selfie</string>
    <string name="text_signup_approve_notify">Hệ thống gửi mã đăng ký qua điện thoại, bạn vui lòng kiểm tra và nhập thông tin để hoàn tất thủ tục đăng ký</string>
    <string name="text_signup_complete_notify">Chúc mừng bạn đã đăng ký sử dụng thành công. Cảm ơn bạn đã đăng ký sử dụng dịch vụ của chúng tôi.</string>
    <string name="text_forget_password_email_notify">Bạn quên mật khẩu? Bạn vui lòng gửi email của mình cho chúng tôi, hệ thống sẽ gửi lại mã code xác nhận qua điện thoại.</string>
    <string name="text_forget_password_code_notify">Hệ thống đã gửi lại code xác nhận qua điện thoại, bạn vui lòng kiểm tra và nhập code để tiếp tục.</string>
    <string name="text_button_take_picture">Chụp ảnh</string>
    <string name="text_button_next">Tiếp tục</string>
    <string name="text_button_send">Gửi</string>
    <string name="text_button_send_mail">Gửi Email</string>
    <string name="text_forget_password_input_notify">Bạn vui lòng nhập mật khẩu mới.</string>
    <string name="text_forget_password_new_pass">Mật khẩu</string>
    <string name="text_forget_password_old_pass">Mật khẩu cũ</string>
    <string name="text_forget_password_new_pass_reinput">Nhập lại mật khẩu</string>
    <string name="text_forget_password_input_notify_2">Lưu ý : Mật khẩu mới không được trùng với mật khẩu cũ, đảm bảo trong mật khẩu có cả chữ và số.</string>
    <string name="text_forget_password_complete_notify">Chúc mừng bạn đã lấy lại mật khẩu thành công.</string>
    <string name="text_find_job_notify">Bạn đang có nhu cầu tìm việc làm? Hãy để lại một số thông tin sau để chúng tôi có thể giúp bạn tìm được việc làm ưng ý nhất.</string>
    <string name="text_find_job_address">Địa điểm làm việc</string>
    <string name="text_find_job_time">Thời gian làm việc</string>
    <string name="text_find_job_type">Loại hình công việc</string>
    <string name="text_button_find_job">Tìm việc</string>
    <string name="text_button_change_info">Thay đổi thông tin</string>
    <string name="text_button_find_location">Tìm nhà trọ</string>
    <string name="text_button_ok">Đồng ý</string>
    <string name="text_button_no">Không đồng ý</string>
    <string name="text_button_date_picker_ok">OK</string>
    <string name="text_button_date_picker_no">CANCEL</string>
    <string name="text_sex_men">Nam</string>
    <string name="text_sex_women">Nữ</string>
    <string name="text_permission_camera">Vui lòng cho phép truy cập vào bộ phận chính của ứng dụng</string>
    <string name="text_info_address_detail">Địa chỉ: </string>
    <string name="text_info_area">Diện tích: </string>
    <string name="text_info_price">Giá thuê: </string>
    <string name="text_info_contract_name">Chủ nhà trọ: </string>
    <string name="text_info_phone">Số điện thoại bàn: </string>
    <string name="text_info_mobile">Số điện thoại di động: </string>
    <string name="text_info_content">Mô tả chi tiết: </string>
    <string name="text_info_created_date">Ngày đăng: </string>
    <string name="text_info_title">Tiêu đề: </string>
    <string name="text_info_cod_date">Ngày hết hạn: </string>
    <string name="text_info_city">Thành phố: </string>
    <string name="text_info_district">Quận/Huyện: </string>
    <string name="text_info_job_offer">Mức lương:</string>
    <string name="text_info_job_experience">Kinh nghiệm:</string>
    <string name="text_info_job_certificate">Yêu cầu bằng cấp:</string>
    <string name="text_info_job_hiring_number">Số lượng cần tuyển:</string>
    <string name="text_info_job_career">Ngành nghề:</string>
    <string name="text_info_job_location">Địa điểm làm việc:</string>
    <string name="text_info_job_level">Chức vụ:</string>
    <string name="text_info_job_working_form">Hình thức làm việc:</string>
    <string name="text_info_job_sex">Yêu cầu giới tính:</string>
    <string name="text_info_job_age">Yêu cầu độ tuổi:</string>
    <string name="text_info_job_description">Mô tả công việc</string>
    <string name="text_info_job_benefits">Quyền lợi được hưởng</string>
    <string name="text_info_job_button">apply now</string>
    <string name="title_dialog_error">Lỗi sai thông tin</string>
    <string name="title_dialog_error_job">Không có việc làm khả dụng</string>
    <string name="title_dialog_reset_pw_fail">Lỗi lấy lại mật khẩu</string>
    <string name="title_dialog_update_fail">Lỗi cập nhật thông tin</string>
    <string name="title_dialog_error_not_active">Lỗi chưa kích hoạt</string>
    <string name="title_dialog_error_active">Lỗi kích hoạt</string>
    <string name="title_dialog_success">Đăng ký</string>
    <string name="title_dialog_update_success">Cập nhật thông tin</string>
    <string name="title_dialog_reset_pw_success">Lấy lại mật khẩu</string>
    <string name="title_dialog_error_internet">Lỗi mạng</string>
    <string name="error_dialog_internet">Bạn chưa kết nối với mạng.\nBạn hãy kết nối với mạng rồi thử lại nhé</string>
    <string name="error_dialog_email_null">Bạn chưa điền thông tin email</string>
    <string name="error_dialog_email_error">Bạn điền sai định dạng email</string>
    <string name="error_dialog_password_null">Bạn chưa điền thông tin mật khẩu</string>
    <string name="error_dialog_old_password_null">Bạn chưa điền thông tin mật khẩu cũ</string>
    <string name="error_dialog_password_error">Bạn điền sai định dạng mật khẩu</string>
    <string name="error_dialog_re_password_null">Bạn chưa điền thông tin xác nhận mật khẩu</string>
    <string name="error_dialog_re_password_error">Bạn điền sai định dạng xác nhận mật khẩu</string>
    <string name="error_dialog_password_repassword_not_equal">Bạn điền hai mật khẩu không giống nhau</string>
    <string name="error_dialog_telephone_null">Bạn chưa điền thông tin số điện thoại di động</string>
    <string name="error_dialog_telephone_error">Bạn điền sai số điện thoại</string>
    <string name="error_dialog_school_error">Tên trường học chưa đúng</string>
    <string name="error_dialog_family_name_null">Bạn chưa điền thông tin họ tên</string>
    <string name="error_dialog_first_name_null">Bạn chưa điền thông tin tên</string>
    <string name="error_dialog_dob_null">Bạn chưa điền thông tin ngày sinh</string>
    <string name="error_dialog_code_null">Bạn chưa điền thông tin code</string>
    <string name="error_dialog_code_error">Bạn điền sai thông tin code</string>
    <string name="error_dialog_city_error">Bạn chưa chọn thành phố</string>
    <string name="error_dialog_district_error">Bạn chưa chọn quận/huyện</string>
    <string name="error_dialog_town_error">Bạn chưa chọn phường/xã</string>
    <string name="string_count_down">Gửi lại số điện thoại xác nhận sau 00:%s</string>
    <string name="string_resend">Gửi lại số điện thoại</string>
    <string name="about_sivi">Dataholicteam chính thức được thành lập từ năm 2016 với 4 thành viên chủ chốt có cùng chung đam mê với dữ liệu, chúng tôi tự gọi mình là những người “nghiện dữ liệu”. Với hơn 20 năm kinh nghiệm tổ chức, mô hình hóa dữ liệu, phân tích dữ liệu tại các tổ chức ngân hàng, tài chính tại Việt Nam, cùng với đam mê học hỏi, khai phá dữ liệu, chúng tôi tự tin sẽ đem đến những giá trị chân thực cho cuộc sống.\nSivi là sản phẩm chúng tôi đã nghiên cứu từ lâu với mong muốn đem lại một sản phẩm ứng dụng các kỹ thuật xử lý, khai thác dữ liệu nhằm mục đích giúp các bạn sinh viên, các bạn trẻ tìm nhà và tìm việc làm một cách nhanh chóng, chính xác và hoàn toàn miễn phí. Nhóm cũng dự định sẽ tiếp tục phát triển thêm các tính năng hữu dụng cho các bạn trẻ trong thời gian tới.\nChúng tôi cảm ơn các bạn đã và đang tin tưởng, ủng hộ sản phẩm. Mọi ý kiến đóng góp xin liên hệ:\nEmail: dataholic.az@gmail.com\nWebsite: dataholic.vn</string>
</resources>