<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/gr_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:checked="true"
            android:text="@string/text_radio_user"
            android:textColor="@color/textColorPrimary" />

        <RadioButton
            android:id="@+id/rd_master"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:text="@string/text_radio_master"
            android:textColor="@color/textColorPrimary" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_email"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:background="@drawable/border_edittext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:text="admin@gmail.com"
            android:singleLine="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_user_password"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:background="@drawable/border_edittext"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:text="123456hhh"
            android:singleLine="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/effect_button"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/text_signin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/effect_button"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/text_signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:text="@string/text_save_info"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>