<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_toolbar"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:maxLines="2"
                    android:text="@string/text_info_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="italic|bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/tv_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/text_info_created_date"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_city" />

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/text_info_city"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_district" />

                <TextView
                    android:id="@+id/tv_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:text="@string/text_info_district"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_address" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:maxLines="2"
                    android:text="@string/text_info_address_detail"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_money" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/text_info_price"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_23sdp"
                    android:layout_height="@dimen/_23sdp"
                    android:src="@drawable/ic_master" />

                <TextView
                    android:id="@+id/tv_contract_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:text="@string/text_info_contract_name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/text_info_phone"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_smart_phone" />

                <TextView
                    android:id="@+id/tv_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/text_info_mobile"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:text="@string/text_info_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>