<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/text_signup_notify"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/ll_top">

        <ImageView
            android:id="@+id/iv_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_take_picture"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignLeft="@+id/btn_next"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/effect_button"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/text_button_take_picture"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/effect_button"
                android:gravity="center"
                android:textStyle="bold"
                android:includeFontPadding="false"
                android:text="@string/text_button_next"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>